--- a/pair.html
+++ b/pair.html
@@ -173,12 +173,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">Queen_Anita-V2 PAIRING CODE</h3>
+            <h3 class="centered-text">KATAKURI_MD PAIRING CODE</h3>
             <br>
-            <h6>Made By David Cyril⚡.</h6>
-            <h6>Enter Your Number with Country Code.</h6>
+            <h6>Arised By KATAKURI.</h6>
+            <h6>27747815326.</h6>
             <div class="input-container">
-              <input placeholder="234906652xxx" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
+              <input placeholder="277478xxxx" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
               <button id="submit">Submit</button>
             </div>
             
