--- a/pair.html
+++ b/pair.html
@@ -176,9 +176,9 @@
             <h3 class="centered-text">KATAKURI_MD PAIRING CODE</h3>
             <br>
             <h6>Arised By KATAKURI.</h6>
-            <h6>27747815326.</h6>
+            <h6>Write Your WhatsApp Number Below.</h6>
             <div class="input-container">
-              <input placeholder="277478xxxx" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
+              <input placeholder="2774xxxxxx" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
               <button id="submit">Submit</button>
             </div>
             
